* Added configuration parameter `jqassistant.analyze.exclude-constraints` taking a list of constraint ids for exclusion from analysis (e.g. if used in a referenced group provided by a plugin)
* Deprecated `ìd` attribute for scanner plugins declared in `jqassistant-plugin.xml` descriptors
* Added CycloneDX BOM (XML and JSON) for distributions and plugins

== 2.2.0

* Added support for abstract concepts, i.e. concepts without executable query (e.g. Cypher)
* Added support for providing concepts from concepts included in group definitions
* Allow plugins to provide a version which is logged on startup

== 2.1.0

* Remove leading and trailing lines as well as indent of rule descriptions
* Fixed sorting of constraints and concepts in HTML report, now sorting by status (failure/warning/success), severity and rule id
* Changed execution order for provided and required concepts for a base concept: required concepts -> providing concepts -> base concept

== 2.0.10

* Upgraded to Maven Resolver 1.9.18 (used for plugin provisioning)

== 2.0.9

* Upgraded to Maven Resolver 1.9.16 (used for plugin provisioning)

== 2.0.8

* Fixed missing plugins when printing effective configuration

== 2.0.5

* Fixed NPE for logging results for rules without description

== 2.0.0
* Migrated to Java 11, i.e. an according Java Runtime is required to run jQAssistant.
+
NOTE: It is still possible to scan applications compiled with older Java versions.
* Added support for default configurations in the user home directory
* Migrated `configuration` and `plugin` APIs to new `runtime` module
* Added a `key` attribute to each row in the XML report (`jqassistant-report.xml`) to allow matching results between subsequent analysis executions
* Added custom reports (e.g. images, CSV files, etc) to the XML report (`jqassistant-report.xml`)
* Changed the reporting API for scripts to have explicit rows and columns
* Removed Asciidoc & PlantUML related support from core

== 1.12.1